--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   cloud_functions: ^5.3.4
   fl_chart: ^0.65.0
   flutter_rating_bar: ^4.0.1
+  firebase_database: ^11.3.4
 
 dev_dependencies:
   flutter_test:
