--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   flutter_rating_bar: ^4.0.1
   firebase_database: ^11.3.4
   tflite_flutter: ^0.11.0
+  webview_flutter: ^4.10.0
 
 dev_dependencies:
   flutter_test:
