--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   firebase_database: ^11.3.4
   tflite_flutter: ^0.11.0
   webview_flutter: ^4.10.0
+  camera: ^0.11.1
 
 dev_dependencies:
   flutter_test:
