--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   tflite_flutter: ^0.11.0
   webview_flutter: ^4.10.0
   camera: ^0.11.1
+  web_socket_channel: ^3.0.2
 
 dev_dependencies:
   flutter_test:
