--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   shared_preferences: ^2.5.2
-  firebase_core: ^3.12.1
+  firebase_core: ^3.13.0
   firebase_auth: ^5.5.1
   cloud_firestore: ^5.6.5
   url_launcher: ^6.3.1
@@ -57,6 +57,7 @@ dependencies:
   webview_flutter: ^4.10.0
   camera: ^0.11.1
   web_socket_channel: ^3.0.2
+  firebase_messaging: ^15.2.5
 
 dev_dependencies:
   flutter_test:
