--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   camera: ^0.11.1
   web_socket_channel: ^3.0.2
   firebase_messaging: ^15.2.5
+  http: ^1.3.0
 
 dev_dependencies:
   flutter_test:
