--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,13 +52,15 @@ dependencies:
   cloud_functions: ^5.4.0
   fl_chart: ^0.65.0
   flutter_rating_bar: ^4.0.1
-  firebase_database: ^11.3.4
+  firebase_database: ^11.3.5
   tflite_flutter: ^0.11.0
   webview_flutter: ^4.10.0
   camera: ^0.11.1
   web_socket_channel: ^3.0.2
   firebase_messaging: ^15.2.5
   http: ^1.3.0
+  overlay_support: ^2.1.0
+  smooth_page_indicator: ^1.2.1
 
 dev_dependencies:
   flutter_test:
