--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,8 @@ dependencies:
   http: ^1.3.0
   overlay_support: ^2.1.0
   smooth_page_indicator: ^1.2.1
+  rxdart: ^0.28.0
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
